tests/baselines/reference/forAwait.1.es6.errors.txt
tests/cases/conformance/forAwait/es6/forAwait.1.es6.ts(2,5): error TS1104: A 'for-await-of' statement is only allowed within an async function or async generator.


==== tests/cases/conformance/forAwait/es6/forAwait.1.es6.ts (1 errors) ====
    declare const ai: AsyncIterable<number>;
    for await (const x of ai) {
        ~~~~~
!!! error TS1104: A 'for-await-of' statement is only allowed within an async function or async generator.
    }